--- a/EDA .ipynb
+++ b/EDA .ipynb
@@ -34,17 +34,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "b302ecb9",
    "metadata": {},
    "outputs": [],
    "source": [
-    "m_data = pd.read_csv('/Users/Atabay/Desktop/Movie_Recommendation_System/Data/m_data_wrangled.csv')"
+    "m_data = pd.read_csv('/Users/Atabay/Desktop/Movie_Recommendation_System_data/Data/m_data_wrangled.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "f497bd39",
    "metadata": {},
    "outputs": [
@@ -271,7 +271,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -281,20 +281,30 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "cfc83ae2",
+   "cell_type": "markdown",
+   "id": "f025219f",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "c_data = pd.read_csv('/Users/Atabay/Desktop/Movie_Recommendation_System/Data/c_data_wrangled.csv')"
+    "## 2.2 Merging Datasets"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
-   "id": "f2fcc487",
+   "execution_count": 8,
+   "id": "c65cb159",
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = c_data.merge(m_data,on='id')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "522cc938",
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -320,6 +330,24 @@
        "      <th>cast</th>\n",
        "      <th>crew</th>\n",
        "      <th>id</th>\n",
+       "      <th>adult</th>\n",
+       "      <th>budget</th>\n",
+       "      <th>genres</th>\n",
+       "      <th>imdb_id</th>\n",
+       "      <th>original_language</th>\n",
+       "      <th>original_title</th>\n",
+       "      <th>overview</th>\n",
+       "      <th>...</th>\n",
+       "      <th>production_countries</th>\n",
+       "      <th>release_date</th>\n",
+       "      <th>revenue</th>\n",
+       "      <th>runtime</th>\n",
+       "      <th>spoken_languages</th>\n",
+       "      <th>status</th>\n",
+       "      <th>title</th>\n",
+       "      <th>video</th>\n",
+       "      <th>vote_average</th>\n",
+       "      <th>vote_count</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -328,33 +356,76 @@
        "      <td>[{'cast_id': 14, 'character': 'Woody (voice)',...</td>\n",
        "      <td>[{'credit_id': '52fe4284c3a36847f8024f49', 'de...</td>\n",
        "      <td>862</td>\n",
+       "      <td>False</td>\n",
+       "      <td>30000000</td>\n",
+       "      <td>[{'id': 16, 'name': 'Animation'}, {'id': 35, '...</td>\n",
+       "      <td>tt0114709</td>\n",
+       "      <td>en</td>\n",
+       "      <td>Toy Story</td>\n",
+       "      <td>Led by Woody, Andy's toys live happily in his ...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>[{'iso_3166_1': 'US', 'name': 'United States o...</td>\n",
+       "      <td>1995-10-30</td>\n",
+       "      <td>373554033.0</td>\n",
+       "      <td>81.0</td>\n",
+       "      <td>[{'iso_639_1': 'en', 'name': 'English'}]</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>Toy Story</td>\n",
+       "      <td>False</td>\n",
+       "      <td>7.7</td>\n",
+       "      <td>5415.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>[{'cast_id': 1, 'character': 'Alan Parrish', '...</td>\n",
        "      <td>[{'credit_id': '52fe44bfc3a36847f80a7cd1', 'de...</td>\n",
        "      <td>8844</td>\n",
+       "      <td>False</td>\n",
+       "      <td>65000000</td>\n",
+       "      <td>[{'id': 12, 'name': 'Adventure'}, {'id': 14, '...</td>\n",
+       "      <td>tt0113497</td>\n",
+       "      <td>en</td>\n",
+       "      <td>Jumanji</td>\n",
+       "      <td>When siblings Judy and Peter discover an encha...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>[{'iso_3166_1': 'US', 'name': 'United States o...</td>\n",
+       "      <td>1995-12-15</td>\n",
+       "      <td>262797249.0</td>\n",
+       "      <td>104.0</td>\n",
+       "      <td>[{'iso_639_1': 'en', 'name': 'English'}, {'iso...</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>Jumanji</td>\n",
+       "      <td>False</td>\n",
+       "      <td>6.9</td>\n",
+       "      <td>2413.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>[{'cast_id': 2, 'character': 'Max Goldman', 'c...</td>\n",
        "      <td>[{'credit_id': '52fe466a9251416c75077a89', 'de...</td>\n",
        "      <td>15602</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>[{'cast_id': 1, 'character': \"Savannah 'Vannah...</td>\n",
-       "      <td>[{'credit_id': '52fe44779251416c91011acb', 'de...</td>\n",
-       "      <td>31357</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>[{'cast_id': 1, 'character': 'George Banks', '...</td>\n",
-       "      <td>[{'credit_id': '52fe44959251416c75039ed7', 'de...</td>\n",
-       "      <td>11862</td>\n",
+       "      <td>False</td>\n",
+       "      <td>0</td>\n",
+       "      <td>[{'id': 10749, 'name': 'Romance'}, {'id': 35, ...</td>\n",
+       "      <td>tt0113228</td>\n",
+       "      <td>en</td>\n",
+       "      <td>Grumpier Old Men</td>\n",
+       "      <td>A family wedding reignites the ancient feud be...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>[{'iso_3166_1': 'US', 'name': 'United States o...</td>\n",
+       "      <td>1995-12-22</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>101.0</td>\n",
+       "      <td>[{'iso_639_1': 'en', 'name': 'English'}]</td>\n",
+       "      <td>Released</td>\n",
+       "      <td>Grumpier Old Men</td>\n",
+       "      <td>False</td>\n",
+       "      <td>6.5</td>\n",
+       "      <td>92.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
+       "<p>3 rows × 23 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
@@ -362,25 +433,61 @@
        "0  [{'cast_id': 14, 'character': 'Woody (voice)',...   \n",
        "1  [{'cast_id': 1, 'character': 'Alan Parrish', '...   \n",
        "2  [{'cast_id': 2, 'character': 'Max Goldman', 'c...   \n",
-       "3  [{'cast_id': 1, 'character': \"Savannah 'Vannah...   \n",
-       "4  [{'cast_id': 1, 'character': 'George Banks', '...   \n",
        "\n",
-       "                                                crew     id  \n",
-       "0  [{'credit_id': '52fe4284c3a36847f8024f49', 'de...    862  \n",
-       "1  [{'credit_id': '52fe44bfc3a36847f80a7cd1', 'de...   8844  \n",
-       "2  [{'credit_id': '52fe466a9251416c75077a89', 'de...  15602  \n",
-       "3  [{'credit_id': '52fe44779251416c91011acb', 'de...  31357  \n",
-       "4  [{'credit_id': '52fe44959251416c75039ed7', 'de...  11862  "
+       "                                                crew     id  adult    budget  \\\n",
+       "0  [{'credit_id': '52fe4284c3a36847f8024f49', 'de...    862  False  30000000   \n",
+       "1  [{'credit_id': '52fe44bfc3a36847f80a7cd1', 'de...   8844  False  65000000   \n",
+       "2  [{'credit_id': '52fe466a9251416c75077a89', 'de...  15602  False         0   \n",
+       "\n",
+       "                                              genres    imdb_id  \\\n",
+       "0  [{'id': 16, 'name': 'Animation'}, {'id': 35, '...  tt0114709   \n",
+       "1  [{'id': 12, 'name': 'Adventure'}, {'id': 14, '...  tt0113497   \n",
+       "2  [{'id': 10749, 'name': 'Romance'}, {'id': 35, ...  tt0113228   \n",
+       "\n",
+       "  original_language    original_title  \\\n",
+       "0                en         Toy Story   \n",
+       "1                en           Jumanji   \n",
+       "2                en  Grumpier Old Men   \n",
+       "\n",
+       "                                            overview  ...  \\\n",
+       "0  Led by Woody, Andy's toys live happily in his ...  ...   \n",
+       "1  When siblings Judy and Peter discover an encha...  ...   \n",
+       "2  A family wedding reignites the ancient feud be...  ...   \n",
+       "\n",
+       "                                production_countries release_date  \\\n",
+       "0  [{'iso_3166_1': 'US', 'name': 'United States o...   1995-10-30   \n",
+       "1  [{'iso_3166_1': 'US', 'name': 'United States o...   1995-12-15   \n",
+       "2  [{'iso_3166_1': 'US', 'name': 'United States o...   1995-12-22   \n",
+       "\n",
+       "       revenue runtime                                   spoken_languages  \\\n",
+       "0  373554033.0    81.0           [{'iso_639_1': 'en', 'name': 'English'}]   \n",
+       "1  262797249.0   104.0  [{'iso_639_1': 'en', 'name': 'English'}, {'iso...   \n",
+       "2          0.0   101.0           [{'iso_639_1': 'en', 'name': 'English'}]   \n",
+       "\n",
+       "     status             title  video vote_average vote_count  \n",
+       "0  Released         Toy Story  False          7.7     5415.0  \n",
+       "1  Released           Jumanji  False          6.9     2413.0  \n",
+       "2  Released  Grumpier Old Men  False          6.5       92.0  \n",
+       "\n",
+       "[3 rows x 23 columns]"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "c_data.head(5)"
+    "data.head(3)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "26fde6d4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
