--- a/Pre-processing and Modeling.ipynb
+++ b/Pre-processing and Modeling.ipynb
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "8015e079",
    "metadata": {},
    "outputs": [
@@ -659,7 +659,7 @@
        "31461                             Room      2838.0           8.1"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -682,16 +682,289 @@
    "id": "1ca5e8c1",
    "metadata": {},
    "source": [
-    "## Collaborative Filtering"
+    "## Content Based Filtering"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "79d7bd56",
+   "metadata": {},
+   "source": [
+    "### a. Plot based recommender "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d994dcd6",
+   "metadata": {},
+   "source": [
+    "I will build a content based filtering using similarity scores of words in overview column"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
+   "id": "11d92004",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    Led by Woody, Andy's toys live happily in his ...\n",
+       "1    When siblings Judy and Peter discover an encha...\n",
+       "2    A family wedding reignites the ancient feud be...\n",
+       "3    Cheated on, mistreated and stepped on, the wom...\n",
+       "4    Just when George Banks has recovered from his ...\n",
+       "Name: overview, dtype: object"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "movies.overview.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "1c107045",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Importing the neccessary library\n",
+    "from sklearn.feature_extraction.text import TfidfVectorizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "3b31ef8c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Defining a tdif vectorizer and removing all the english words stop words\n",
+    "tfidf = TfidfVectorizer(stop_words='english')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "2dd15fb7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Replacing NaN with an empty string\n",
+    "movies['overview'] = movies['overview'].fillna('')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "2d09a1e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Constructing the required tfidf matrix by fitting and transforming the data\n",
+    "tfidf_matrix = tfidf.fit_transform(movies['overview'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "fb5fd96a",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(44035, 75375)"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "tfidf_matrix.shape"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "58a69a4c",
+   "metadata": {},
+   "source": [
+    "It seems that there are over 75000 words to describe 44035 movies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "id": "5a328e46",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Importing linear_kernel\n",
+    "from sklearn.metrics.pairwise import linear_kernel\n",
+    "\n",
+    "# Compute the cosine similarity matrix\n",
+    "cosine_sim = linear_kernel(tfidf_matrix, tfidf_matrix)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5e30af28",
+   "metadata": {},
+   "source": [
+    "We need to define a function taking movie title as an input and recommending 5 similar movies as an output"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "0abf001b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Creating a reverse map of indexes and movie titles\n",
+    "indexes = pd.Series(movies.index, index=movies['title']).drop_duplicates()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "18469b60",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "title\n",
+       "Toy Story                          0\n",
+       "Jumanji                            1\n",
+       "Grumpier Old Men                   2\n",
+       "Waiting to Exhale                  3\n",
+       "Father of the Bride Part II        4\n",
+       "                               ...  \n",
+       "Robin Hood                     44030\n",
+       "Century of Birthing            44031\n",
+       "Betrayal                       44032\n",
+       "Satan Triumphant               44033\n",
+       "Queerama                       44034\n",
+       "Length: 44035, dtype: int64"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "indexes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "30fed963",
+   "metadata": {},
+   "source": [
+    "#### Defining the recommendation function"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "1683927f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function that takes in movie title as input and outputs the most similar movies\n",
+    "def get_recommendations(title, cosine_sim=cosine_sim):\n",
+    "    # Index of the movie that matches the title\n",
+    "    index = indexes[title]\n",
+    "\n",
+    "    # Pairwsie similarity scores of all movies with that movie\n",
+    "    sim_scores = list(enumerate(cosine_sim[index]))\n",
+    "\n",
+    "    # Sort the movies based on the similarity scores\n",
+    "    sim_scores = sorted(sim_scores, key=lambda x: x[1], reverse=True)\n",
+    "\n",
+    "    # Get the scores of the 5 most similar movies\n",
+    "    sim_scores = sim_scores[1:6]\n",
+    "\n",
+    "    # Get the movie indixes\n",
+    "    movie_indexes = [i[0] for i in sim_scores]\n",
+    "\n",
+    "    # Return the top 10 most similar movies\n",
+    "    return movies['title'].iloc[movie_indexes]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "2cefe260",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1159               The Godfather: Part II\n",
+       "42711    The Godfather Trilogy: 1972-1990\n",
+       "1883              The Godfather: Part III\n",
+       "22780                          Blood Ties\n",
+       "11226                    Household Saints\n",
+       "Name: title, dtype: object"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_recommendations('The Godfather')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "id": "b3da60ed",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "16783              Berta's Motives\n",
+       "497                          North\n",
+       "4817     Jimmy Neutron: Boy Genius\n",
+       "14588                The Butterfly\n",
+       "14624                       Svampe\n",
+       "Name: title, dtype: object"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_recommendations('Spirited Away')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1c42b994",
+   "metadata": {},
+   "source": [
+    "The recommendation system does a good job returning movies with similar plot descriptions. However, we can increase the quality of the recommendation system by adding more metadata."
+   ]
   }
  ],
  "metadata": {
