--- a/Pre-processing and Modeling.ipynb
+++ b/Pre-processing and Modeling.ipynb
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 19,
    "id": "1683927f",
    "metadata": {},
    "outputs": [],
@@ -929,11 +929,11 @@
     {
      "data": {
       "text/plain": [
-       "1825            Jimmy Neutron: Boy Genius\n",
-       "4599                      51 Birch Street\n",
-       "131                               G-Force\n",
-       "2394                               Wolves\n",
-       "117     Charlie and the Chocolate Factory\n",
+       "2731     The Godfather: Part II\n",
+       "1873                 Blood Ties\n",
+       "867     The Godfather: Part III\n",
+       "3727                 Easy Money\n",
+       "3623                       Made\n",
        "Name: title, dtype: object"
       ]
      },
@@ -943,7 +943,7 @@
     }
    ],
    "source": [
-    "get_recommendations('Spirited Away')"
+    "get_recommendations('The Godfather')"
    ]
   },
   {
@@ -1644,33 +1644,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 50,
    "id": "49f07ec0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "3604               Apollo 18\n",
-       "2130            The American\n",
-       "634               The Matrix\n",
-       "1341    The Inhabited Island\n",
-       "529         Tears of the Sun\n",
+       "2731     The Godfather: Part II\n",
+       "1873                 Blood Ties\n",
+       "867     The Godfather: Part III\n",
+       "3727                 Easy Money\n",
+       "3623                       Made\n",
        "Name: title, dtype: object"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_recommendations('Avatar', cosine_sim)"
+    "get_recommendations('The Godfather', cosine_sim)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 51,
    "id": "5687b0c4",
    "metadata": {
     "scrolled": true
@@ -1679,21 +1679,21 @@
     {
      "data": {
       "text/plain": [
-       "206                         Clash of the Titans\n",
-       "1      Pirates of the Caribbean: At World's End\n",
-       "5                                  Spider-Man 3\n",
-       "9            Batman v Superman: Dawn of Justice\n",
-       "10                             Superman Returns\n",
+       "2731      The Godfather: Part II\n",
+       "867      The Godfather: Part III\n",
+       "1525              Apocalypse Now\n",
+       "3012               The Outsiders\n",
+       "4637    Amidst the Devil's Wings\n",
        "Name: title, dtype: object"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "get_recommendations('Avatar', cosine_sim2)"
+    "get_recommendations('The Godfather', cosine_sim2)"
    ]
   },
   {
@@ -1756,9 +1756,9 @@
      "text": [
       "Requirement already satisfied: surprise in /Users/Atabay/opt/anaconda3/lib/python3.8/site-packages (0.1)\n",
       "Requirement already satisfied: scikit-surprise in /Users/Atabay/opt/anaconda3/lib/python3.8/site-packages (from surprise) (1.1.3)\n",
-      "Requirement already satisfied: scipy>=1.3.2 in /Users/Atabay/opt/anaconda3/lib/python3.8/site-packages (from scikit-surprise->surprise) (1.6.2)\n",
-      "Requirement already satisfied: numpy>=1.17.3 in /Users/Atabay/opt/anaconda3/lib/python3.8/site-packages (from scikit-surprise->surprise) (1.20.1)\n",
       "Requirement already satisfied: joblib>=1.0.0 in /Users/Atabay/opt/anaconda3/lib/python3.8/site-packages (from scikit-surprise->surprise) (1.0.1)\n",
+      "Requirement already satisfied: numpy>=1.17.3 in /Users/Atabay/opt/anaconda3/lib/python3.8/site-packages (from scikit-surprise->surprise) (1.20.1)\n",
+      "Requirement already satisfied: scipy>=1.3.2 in /Users/Atabay/opt/anaconda3/lib/python3.8/site-packages (from scikit-surprise->surprise) (1.6.2)\n",
       "Note: you may need to restart the kernel to use updated packages.\n"
      ]
     }
@@ -1875,7 +1875,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 42,
    "id": "4159a56d",
    "metadata": {
     "scrolled": true
@@ -1888,30 +1888,30 @@
       "Evaluating RMSE, MAE of algorithm SVD on 5 split(s).\n",
       "\n",
       "                  Fold 1  Fold 2  Fold 3  Fold 4  Fold 5  Mean    Std     \n",
-      "RMSE (testset)    0.8997  0.8933  0.9033  0.8976  0.8904  0.8969  0.0046  \n",
-      "MAE (testset)     0.6919  0.6874  0.6957  0.6901  0.6860  0.6902  0.0034  \n",
-      "Fit time          0.77    0.72    0.76    0.93    0.79    0.79    0.07    \n",
-      "Test time         0.44    0.14    0.20    0.12    0.19    0.22    0.11    \n"
+      "RMSE (testset)    0.8965  0.8917  0.8933  0.9037  0.8940  0.8958  0.0042  \n",
+      "MAE (testset)     0.6887  0.6857  0.6907  0.6950  0.6867  0.6894  0.0033  \n",
+      "Fit time          0.71    0.78    0.88    1.08    0.86    0.86    0.12    \n",
+      "Test time         0.19    0.11    0.18    0.54    0.12    0.23    0.16    \n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'test_rmse': array([0.8997435 , 0.89331488, 0.90330984, 0.89764306, 0.89043149]),\n",
-       " 'test_mae': array([0.69191806, 0.68741211, 0.6957128 , 0.69008084, 0.68601642]),\n",
-       " 'fit_time': (0.7716090679168701,\n",
-       "  0.7156479358673096,\n",
-       "  0.7603578567504883,\n",
-       "  0.9322319030761719,\n",
-       "  0.7940728664398193),\n",
-       " 'test_time': (0.43981194496154785,\n",
-       "  0.13672089576721191,\n",
-       "  0.20443081855773926,\n",
-       "  0.12099099159240723,\n",
-       "  0.19324231147766113)}"
+       "{'test_rmse': array([0.89648186, 0.8916647 , 0.8932952 , 0.90367309, 0.89401834]),\n",
+       " 'test_mae': array([0.68874773, 0.68566699, 0.69068577, 0.69503206, 0.68668208]),\n",
+       " 'fit_time': (0.7096269130706787,\n",
+       "  0.7788341045379639,\n",
+       "  0.8753879070281982,\n",
+       "  1.0762152671813965,\n",
+       "  0.861314058303833),\n",
+       " 'test_time': (0.1905059814453125,\n",
+       "  0.11146187782287598,\n",
+       "  0.17801403999328613,\n",
+       "  0.543651819229126,\n",
+       "  0.11880707740783691)}"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1932,7 +1932,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 43,
    "id": "a2007331",
    "metadata": {
     "scrolled": true
@@ -1941,10 +1941,10 @@
     {
      "data": {
       "text/plain": [
-       "<surprise.prediction_algorithms.matrix_factorization.SVD at 0x7f9698f7abb0>"
+       "<surprise.prediction_algorithms.matrix_factorization.SVD at 0x7fbbef9fd670>"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1965,7 +1965,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 44,
    "id": "a69943f0",
    "metadata": {},
    "outputs": [
@@ -2045,7 +2045,7 @@
        "2400       2      497     3.0                  The Green Mile"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2067,7 +2067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 45,
    "id": "1449ec7d",
    "metadata": {},
    "outputs": [
@@ -2395,7 +2395,7 @@
        "187        2      153     4.0                 Lost in Translation"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2414,7 +2414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 46,
    "id": "0c3831ca",
    "metadata": {
     "scrolled": true
@@ -2460,7 +2460,7 @@
        "322  The Fifth Element  18"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2473,7 +2473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 47,
    "id": "2210973f",
    "metadata": {
     "scrolled": false
@@ -2482,10 +2482,10 @@
     {
      "data": {
       "text/plain": [
-       "Prediction(uid=2, iid=322, r_ui=3, est=3.7593585620966308, details={'was_impossible': False})"
+       "Prediction(uid=2, iid=322, r_ui=3, est=3.6777376424197104, details={'was_impossible': False})"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2504,7 +2504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 48,
    "id": "137cd036",
    "metadata": {
     "scrolled": true
@@ -2550,7 +2550,7 @@
        "1559  The Notebook  11036"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2562,7 +2562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 49,
    "id": "d5b19bb3",
    "metadata": {
     "scrolled": false
@@ -2571,10 +2571,10 @@
     {
      "data": {
       "text/plain": [
-       "Prediction(uid=2, iid=11036, r_ui=3, est=3.4433906189646724, details={'was_impossible': False})"
+       "Prediction(uid=2, iid=11036, r_ui=3, est=3.460915234351116, details={'was_impossible': False})"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
